--- a/Pipfile
+++ b/Pipfile
@@ -4,6 +4,8 @@ url = "https://pypi.org/simple"
 verify_ssl = true
 
 [dev-packages]
+flake8 = "*"
+autopep8 = "*"
 
 [packages]
 environs = "==5.2.1"
@@ -12,6 +14,7 @@ python-dotenv = "==0.10.3"
 pytz = "==2019.2"
 sqlparse = "==0.3.0"
 Django = "==2.2.5"
+pipfile = "*"
 
 [requires]
 python_version = "3.7"
