--- a/Pipfile
+++ b/Pipfile
@@ -8,13 +8,8 @@ flake8 = "*"
 autopep8 = "*"
 
 [packages]
-environs = "==5.2.1"
-marshmallow = "==3.1.1"
-python-dotenv = "==0.10.3"
-pytz = "==2019.2"
-sqlparse = "==0.3.0"
-Django = "==2.2.5"
-pipfile = "*"
+django = "*"
+environs = "*"
 
 [requires]
 python_version = "3.7"
